# estudo_python

./: README.md  pyproject.toml
src/exercicios/: 01.perimetro_circulo.py  02.tratamento_desafio.py
