[tool.poetry]
name = "estudos python"
version = "0.1.0"
description = "Ambiente Virtual para estudos do Bootcamp"
authors = ["teodoromatheus <matheusteodoro.r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
